no search on all pages for small screens only side nav

--- a/about.html
+++ b/about.html
@@ -36,11 +36,11 @@
       </a>
 
       <div class="justify-content-end">
-        <button class="icon-style">
+        <button class="icon-style d-none d-md-inline">
           <a class="text-decoration-none text-reset" type="button" data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
+             data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
-              viewBox="0 0 16 16">
+                 viewBox="0 0 16 16">
               <path
                 d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
             </svg>
@@ -110,6 +110,7 @@
                 </button>
               </li>
               <hr>
+              <li class="nav-item"><a class="nav-link" href="index.html">Home Page</a></li>
               <li class="nav-item"><a class="nav-link" href="tickets.html">Tickets</a></li>
               <li class="nav-item"><a class="nav-link" href="blog.html">Spotlight</a></li>
               <li class="nav-item"><a class="nav-link" href="about.html">Who Are We</a></li>
@@ -148,11 +149,11 @@
         </a>
 
         <div class="justify-content-end">
-          <button class="icon-style icon-white">
+          <button class="icon-style d-none d-md-inline icon-style icon-white">
             <a class="text-decoration-none text-reset" type="button" data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
+               data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
-                viewBox="0 0 16 16">
+                   viewBox="0 0 16 16">
                 <path
                   d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
               </svg>
@@ -242,7 +243,7 @@
 
   <div class="index-about-bg slide-up" style="padding-bottom: 3%; background-color: #D0B3FA;">
       <div class="row">
-        <div class="col-6">
+        <div class="col-12 col-md-6">
           <div class="container"> <!-- Add container to control padding -->
             <a href="tickets.html" class="no-link-style">
               <h4 style="color: white;">Buy Tickets for Theatre Shows</h4>
@@ -332,7 +333,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-12 col-md-6">
           <a href="blog.html" class="no-link-style">
             <h4 style="color: white;">Read Articles with LGBTQ+ Actors and Creators</h4>
           </a>
@@ -353,19 +354,19 @@
   </div>
 
   <div class="row index-about-bg text-center background-rainbow" style="color: whitesmoke; padding-top: 6%; padding-bottom: 5%;">
-    <div class="col-4">
+    <div class="col-12 col-md-4">
       <h4>Inclusivity</h4>
       <p style="padding: 3%;" class="outfit-medium">
         Whether you live for the spotlight or cheer from the seats, if you love LGBTQ+ theatre, you belong here.
       </p>
     </div>
-    <div class="col-4">
+    <div class="col-12 col-md-4">
       <h4>Authenticity</h4>
       <p style="padding: 3%;" class="outfit-medium">
         Bold, proud and authentic, we are committed to put LGBTQ+ voices in the spotlight.
       </p>
     </div>
-    <div class="col-4">
+    <div class="col-12 col-md-4">
       <h4>Learning</h4>
       <p style="padding: 3%;" class="outfit-medium">
         With every show, post and moment there’s something new to discover about theatre, identity and about each other.
@@ -379,28 +380,28 @@
       <h4>Leadership</h4>
       <br>
       <div class="row">
-        <div class="col-3">
+        <div class="col-6 col-md-3">
           <img src="images/portraits/portrait_freya.jpg" alt="Freya Willems" style="width:100%">
           <br>
           <br>
           <h5>Freya Willems</h5>
           <p>Lead Web Developer & UI/UX Designer</p>
         </div>
-        <div class="col-3">
+        <div class="col-6 col-md-3">
           <img src="images/portraits/portrait_daniel.jpg" alt="Dániel Horváth " style="width:100%">
           <br>
           <br>
           <h5>Dániel Horváth</h5>
           <p>Frontend Developer & UI/UX Designer</p>
         </div>
-        <div class="col-3">
+        <div class="col-6 col-md-3">
           <img src="images/portraits/portrait_elena.jpg" alt="Elena Beganović" style="width:100%">
           <br>
           <br>
           <h5>Elena Beganović</h5>
           <p>Brand Strategist & Copywriter</p>
         </div>
-        <div class="col-3">
+        <div class="col-6 col-md-3">
           <img src="images/portraits/portrait_mees.jpg" alt="Mees de Wilde" style="width:100%">
           <br>
           <br>
