--- a/corporate.html
+++ b/corporate.html
@@ -107,13 +107,16 @@
     </a>
 
       <div class="justify-content-end">
-        <button class="icon-style">
-          <a class="text-decoration-none text-reset" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+				<button class="icon-style d-none d-md-inline">
+          <a class="text-decoration-none text-reset" type="button" data-bs-toggle="offcanvas"
+             data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
+                 viewBox="0 0 16 16">
+              <path
+                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
             </svg>
           </a>
-      </button>
+        </button>
       <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
         <div class="offcanvas-header search-margin" style="padding-bottom: 0px;">
           <h5 class="offcanvas-title" id="offcanvasTopLabel">popular searches</h5>
@@ -174,6 +177,7 @@
               </button>
             </li>
             <hr>
+						<li class="nav-item"><a class="nav-link" href="index.html">Home Page</a></li>
             <li class="nav-item"><a class="nav-link" href="tickets.html">Tickets</a></li>
             <li class="nav-item"><a class="nav-link" href="blog.html">Spotlight</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">Who Are We</a></li>
@@ -213,13 +217,16 @@
       </a>
   
         <div class="justify-content-end">
-          <button class="icon-style icon-white">
-            <a class="text-decoration-none text-reset" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+          <button class="icon-style d-none d-md-inline icon-style icon-white">
+            <a class="text-decoration-none text-reset" type="button" data-bs-toggle="offcanvas"
+               data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
+                   viewBox="0 0 16 16">
+                <path
+                  d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
               </svg>
             </a>
-        </button>
+          </button>
         <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
           <div class="offcanvas-header search-margin" style="padding-bottom: 0px;">
             <h5 class="offcanvas-title" id="offcanvasTopLabel">popular searches</h5>
