--- a/corporate.html
+++ b/corporate.html
@@ -335,25 +335,25 @@
 				  <td contenteditable="true">1</td>
 				  <td contenteditable="true">225911</td>
 				  <td contenteditable="true">Mission</td>
-				  <td contenteditable="true"></td>
+				  <td contenteditable="true"><a href="about.html">Mission</a></td>
 				</tr>
 				<tr>
 				  <td contenteditable="true">2</td>
 				  <td contenteditable="true">232267</td>
 				  <td contenteditable="true">Vision</td>
-				  <td contenteditable="true"></td>
+				  <td contenteditable="true"><a href="vision">Vision</a></td>
 				</tr>
 				<tr>
 				  <td contenteditable="true">3</td>
 				  <td contenteditable="true">233895</td>
 				  <td contenteditable="true">Values</td>
-				  <td contenteditable="true"></td>
+				  <td contenteditable="true"><a href="values">Values</a></td>
 				</tr>
 				<tr>
 				  <td contenteditable="true">4</td>
 				  <td contenteditable="true">234314</td>
 				  <td contenteditable="true">Values</td>
-				  <td contenteditable="true"></td>
+				  <td contenteditable="true"><a href="values">Values</a></td>
 				</tr>
 			  </tbody>
 			</table>
@@ -366,11 +366,11 @@
              <img src="images/logo-out-n-center/logo-vertical-out-n-center.jpeg" alt="outncenter" class="img-fluid logo-corporate-page">
           	 </div>
 			
-		  	 <h3 class="subheadings-content-part-corporate-page">Brand vision</h3>
+		  	 <h3 class="subheadings-content-part-corporate-page" id="vision">Brand vision</h3>
     	  	 <p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on
       		  authentic storytelling. Because everyone at centre stage deserves to be out and proud.</p>
 			
-		  	 <h3 class="subheadings-content-part-corporate-page">Values</h3>
+		  	 <h3 class="subheadings-content-part-corporate-page" id="values">Values</h3>
       	  	 <ul>
         		<li><strong>Authenticity</strong> - Whether you live for the spotlight or cheer from the seats, if you love LGBTQ+ theatre, you belong here.</li>
         		<li> <strong>Learning</strong> - Bold, proud and authentic, we are committed to put LGBTQ+ voices in the spotlight. </li>
