--- a/about.html
+++ b/about.html
@@ -190,6 +190,7 @@
             <span class="navbar-toggler-icon navbar-dark"></span>
           </button>
         </div>
+		</div>
     </nav>
 
     <div class="carousel-inner">
