--- a/corporate.html
+++ b/corporate.html
@@ -256,6 +256,7 @@
           <span class="navbar-toggler-icon navbar-dark"></span>
         </button>
       </div>
+	 </div>
     </nav>
   <!--end of navigations-->
 
