--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
             <span class="navbar-toggler-icon navbar-dark"></span>
           </button>
         </div>
+		</div>
     </nav>
 
     <div class="carousel-indicators">
@@ -384,7 +385,6 @@
             <h5 class="blogtitle">Queer Theater Fans Speak: Why Representation Matters On Stage</h5>
           </a>
           <p class="date">29.04.2025</p>
-          </a>
         </div>
         <div class="col-12 col-md-6">
           <a href="blog.html" class="no-link-style">
@@ -392,7 +392,6 @@
             <h5 class="blogtitle">Inside the Spotlight: Interviews with Queer Theater Stars</h5>
           </a>
           <p class="date">23.04.2025</p>
-          </a>
         </div>
       </div>
     </div>
@@ -440,9 +439,6 @@
         <img src="images/smiling-backstage-dude.jpg" alt="backstage dude" style="width: 100%;">
       </div>
     </div>
-
-  </div>
-  </div>
   </div>
   <!---last about colour-->
   <div class="index-about-bg" style="background-color: #5F2A88; color: whitesmoke; padding-bottom: 3%;">
@@ -515,7 +511,7 @@
             </div>
             <div class="mb-3">
               <label for="recipient-name" class="col-form-label">Password</label>
-              <input type="text" class="form-control" id="recipient-name" placeholder="Enter your password"
+              <input type="text" class="form-control" id="recipient-password" placeholder="Enter your password"
                 aria-label="Enter your password">
             </div>
             
