--- a/profile.html
+++ b/profile.html
@@ -185,6 +185,7 @@
           <span class="navbar-toggler-icon navbar-dark"></span>
         </button>
       </div>
+	  </div>
   </nav>
 
   <div class="carousel-inner">
