--- a/tickets.html
+++ b/tickets.html
@@ -204,6 +204,7 @@
             <span class="navbar-toggler-icon navbar-dark"></span>
           </button>
         </div>
+		</div>
     </nav>
 
     <div class="carousel-inner">
@@ -601,6 +602,7 @@
           </div>
         </div>
       </div>
+	 </div>
 
       <br>
 
@@ -628,7 +630,7 @@
             </div>
             <div class="mb-3">
               <label for="recipient-name" class="col-form-label">Password</label>
-              <input type="text" class="form-control" id="recipient-name" placeholder="Enter your password"
+              <input type="text" class="form-control" id="recipient-password" placeholder="Enter your password"
                 aria-label="Enter your password">
             </div>
             
