--- a/index.html
+++ b/index.html
@@ -47,16 +47,14 @@
       </a>
 
       <div class="justify-content-end">
-        <button class="icon-style d-none d-md-inline">
-          <div class="text-decoration-none text-reset" data-bs-toggle="offcanvas"
+          <div class="text-decoration-none text-reset d-none d-md-inline" data-bs-toggle="offcanvas"
              data-bs-target="#offcanvasTop1" aria-controls="offcanvasTop1">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search icon-style" style="margin-right: 7px;"
                  viewBox="0 0 16 16">
               <path
                 d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
             </svg>
           </div>
-        </button>
         
         <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop1" aria-labelledby="offcanvasTop1Label">
           <div class="offcanvas-header search-margin" style="padding-bottom: 0px;">
