--- a/corporate.html
+++ b/corporate.html
@@ -1210,9 +1210,9 @@
 		  
       		<p><strong>Fixed Costs</strong></p>
       		<ul>
-				<li><strong>Hosting</strong> There will be costs made for keeping the website live and accessible. This will cost €1200 per year (Ko, 2025). </li>
-				<li><strong>People</strong> This includes salaries for employees and contributes. This will be  €104640 per year for four employees (Nationale Beroepengids, 2024).</li>
-				<li><strong>Ticket</strong> <strong>management system</strong> –the system is developed and licensed for a fixed fee of  €240 (Pricing – SupportSystem, n.d.)</li>
+				<li><strong>Hosting</strong> &nbsp; - There will be costs made for keeping the website live and accessible. This will cost €1200 per year (Ko, 2025).</li>
+				<li><strong>People</strong> &nbsp;- This includes salaries for employees and contributes. This will be  €104640 per year for four employees (Nationale Beroepengids, 2024).</li>
+				<li><strong>Ticket</strong> <strong>management system</strong> –The system is developed and licensed for a fixed fee of  €240 (Pricing – SupportSystem, n.d.)</li>
       		</ul>
 			<p>Total variable costs: €106080 </p>
 		  
