--- a/corporate.html
+++ b/corporate.html
@@ -333,28 +333,28 @@
 			  </thead>
 			  <tbody>
 				<tr>
-				  <td contenteditable="true">1</td>
-				  <td contenteditable="true">225911</td>
-				  <td contenteditable="true">Mission</td>
-				  <td contenteditable="true"><a href="about.html">Mission</a></td>
+				  <td>1</td>
+				  <td>225911</td>
+				  <td>Mission</td>
+				  <td><a href="about.html">Mission</a></td>
 				</tr>
 				<tr>
-				  <td contenteditable="true">2</td>
-				  <td contenteditable="true">232267</td>
-				  <td contenteditable="true">Vision</td>
-				  <td contenteditable="true"><a href="vision">Vision</a></td>
+				  <td>2</td>
+				  <td>232267</td>
+				  <td>Vision</td>
+				  <td><a href="vision">Vision</a></td>
 				</tr>
 				<tr>
-				  <td contenteditable="true">3</td>
-				  <td contenteditable="true">233895</td>
-				  <td contenteditable="true">Values</td>
-				  <td contenteditable="true"><a href="values">Values</a></td>
+				  <td>3</td>
+				  <td>233895</td>
+				  <td>Values</td>
+				  <td><a href="values">Values</a></td>
 				</tr>
 				<tr>
-				  <td contenteditable="true">4</td>
-				  <td contenteditable="true">234314</td>
-				  <td contenteditable="true">Values</td>
-				  <td contenteditable="true"><a href="values">Values</a></td>
+				  <td>4</td>
+				  <td>234314</td>
+				  <td>Values</td>
+				  <td><a href="values">Values</a></td>
 				</tr>
 			  </tbody>
 			</table>
