--- a/corporate.html
+++ b/corporate.html
@@ -342,19 +342,19 @@
 				  <td>2</td>
 				  <td>232267</td>
 				  <td>Vision</td>
-				  <td><a href="vision">Vision</a></td>
+				  <td><a href="#vision">Vision</a></td>
 				</tr>
 				<tr>
 				  <td>3</td>
 				  <td>233895</td>
 				  <td>Values</td>
-				  <td><a href="values">Values</a></td>
+				  <td><a href="#values">Values</a></td>
 				</tr>
 				<tr>
 				  <td>4</td>
 				  <td>234314</td>
 				  <td>Values</td>
-				  <td><a href="values">Values</a></td>
+				  <td><a href="#values">Values</a></td>
 				</tr>
 			  </tbody>
 			</table>
