--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <div class="d-flex justify-content-start">
         <a href="index.html" class="no-link-style">
-          <img src="images/onc_notext.svg" alt="Brand Logo" style="height: 30px;">
+          <img src="images/logo-out-n-center/onc_notext.svg" alt="Brand Logo" style="height: 30px;">
         </a>
       </div>
 
@@ -147,7 +147,7 @@
 
         <div class="d-flex justify-content-start">
           <a href="index.html" class="no-link-style">
-            <img src="images/onc_notext2.svg" alt="Brand Logo" style="height: 30px;">
+            <img src="images/logo-out-n-center/onc_notext2.svg" alt="Brand Logo" style="height: 30px;">
           </a>
         </div>
 
@@ -412,10 +412,10 @@
           Welcome to your new favourite queer theatre world website!
         </p>
         <p>Where drama is celebrated, <strong>stories are recognised</strong> and the LGBTQ+ community shines in the spotlight.</p>
-        <img src="images/dragqueen-bed.jpg" alt="dragqueen" style="width: 100%;">
+        <img src="images/main-page/dragqueen-bed.jpg" alt="dragqueen" style="width: 100%;">
       </div>
       <div class="col-12 col-md-4">
-        <img src="images/girls-hugging.jpg" alt="girls hugging" style="width: 100%;">
+        <img src="images/main-page/girls-hugging.jpg" alt="girls hugging" style="width: 100%;">
         <br>
         <br>
         <p>
@@ -430,7 +430,7 @@
           Are you in for good LGBTQ+ representation?<strong>&nbsp; So are we!</strong> Theatre is better when everyone
           has a role, and <strong>this show is just getting started!</strong>
         </p>
-        <img src="images/smiling-backstage-dude.jpg" alt="backstage dude" style="width: 100%;">
+        <img src="images/main-page/smiling-backstage-dude.jpg" alt="backstage dude" style="width: 100%;">
       </div>
     </div>
   </div>
@@ -534,7 +534,7 @@
       <div class="row">
         <!-- Brand Logo & Name -->
         <div class="col-md-4 text-center text-md-start">
-          <img src="images/onc_notext2.svg" alt="Brand Logo" style="height: 50px;">
+          <img src="images/logo-out-n-center/onc_notext2.svg" alt="Brand Logo" style="height: 50px;">
           <h5 class="mt-2">outncenter</h5>
         </div>
 
