--- a/corporate.html
+++ b/corporate.html
@@ -96,7 +96,7 @@
      
       <div class="d-flex justify-content-start">
 				<a href="index.html" class="no-link-style">
-        <img src="images/onc_notext.svg" alt="Brand Logo" style="height: 30px;">
+        <img src="images/logo-out-n-center/onc_notext.svg" alt="Brand Logo" style="height: 30px;">
 				</a>
       </div>
 
