about errors fixed two

--- a/about.html
+++ b/about.html
@@ -341,7 +341,7 @@
               <h5 class="outfit-semibold">Must-See LGBTQ+ Shows Right Now</h5>
               <p class="outfit-medium">A roundup of the latest and best gay-themed productions.</p>
               <p>From groundbreaking dramas to heartwarming comedies, these standout LGBTQ+ productions are redefining
-                queer storytelling on stage and screen. <a href="#" class="no-link-style icon-style">more...</a></p>
+                queer storytelling on stage and screen.</p>
               <p class="date">02.05.2025</p>
             </div>
           </a>
