corporate error fixes two

--- a/corporate.html
+++ b/corporate.html
@@ -200,13 +200,13 @@
 
   <!-- Carousel and its navigation-->
   <div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
-    <nav class="navbar" id="transNavbar">
+		<nav class="navbar" id="transNavbar">
       <div class="container-fluid d-flex">
         <!-- Left aligned logo -->
 
         <div class="d-flex justify-content-start">
           <a href="index.html" class="no-link-style">
-            <img src="images/logo-out-n-center/onc_notext2.svg" alt="Brand Logo" style="height: 30px;">
+            <img src="images/onc_notext2.svg" alt="Brand Logo" style="height: 30px;">
           </a>
         </div>
 
@@ -258,6 +258,7 @@
         </div>
 		</div>
     </nav>
+		</div>
   <!--end of navigations-->
 
   <!--main for your content and text starts here-->
