--- a/corporate.html
+++ b/corporate.html
@@ -199,8 +199,8 @@
   <!--end down-scrollnavbar-->
 
   <!-- Carousel and its navigation-->
-  <div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
-		<nav class="navbar" id="transNavbar">
+  <div id="carouselExampleDark" class="carousel slide" style="z-index: 2;" data-bs-ride="carousel">
+    <nav class="navbar" id="transNavbar">
       <div class="container-fluid d-flex">
         <!-- Left aligned logo -->
 
@@ -258,7 +258,50 @@
         </div>
 		</div>
     </nav>
-		</div>
+
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="10000">
+        <div class="index-about-bg background-rainbow" style="color: whitesmoke; padding-bottom: 2px !important; padding-top: 46px !important;">
+          <div class="row">
+            <div class="col-12 text-center">
+              <div class="scroll-wrapper">
+                <div class="scroll-content">
+                  <div class="scroll-text">
+                    <a href="profile.html" class="no-link-style">
+                    <i>
+                    <span>
+                      <strong>Subscribe!</strong> Get <strong>Premium Articles</strong> & <strong>10% Off</strong> All Theatre Tickets!
+                      For just <strong>2.99</strong> euros! &nbsp;&nbsp;&nbsp;
+                    </span>
+                    <span>
+                      <strong>Subscribe!</strong> Get <strong>Premium Articles</strong> & <strong>10% Off</strong> All Theatre Tickets!
+                      For just <strong>2.99</strong> euros! &nbsp;&nbsp;&nbsp;
+                    </span>
+                    <span>
+                      <strong>Subscribe!</strong> Get <strong>Premium Articles</strong> & <strong>10% Off</strong> All Theatre Tickets!
+                      For just <strong>2.99</strong> euros! &nbsp;&nbsp;&nbsp;
+                    </span>
+                    <span>
+                      <strong>Subscribe!</strong> Get <strong>Premium Articles</strong> & <strong>10% Off</strong> All Theatre Tickets!
+                      For just <strong>2.99</strong> euros! &nbsp;&nbsp;&nbsp;
+                    </span>
+                    <span>
+                      <strong>Subscribe!</strong> Get <strong>Premium Articles</strong> & <strong>10% Off</strong> All Theatre Tickets!
+                      For just <strong>2.99</strong> euros! &nbsp;&nbsp;&nbsp;
+                    </span>
+                  </i>
+                  </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
   <!--end of navigations-->
 
   <!--main for your content and text starts here-->
