--- a/corporate.html
+++ b/corporate.html
@@ -474,6 +474,7 @@
 					<p>#FDB92E Yellow signifies joy, visibility and optimism. This colour captures light and spotlight energy
 						which is perfect for a website about theatre. As yellow is a symbol for positivity and visibility it relates
 						to value in the LGBTQ+ community such as pride and the importance of visibility.</p>
+						<p>
 					#B3296D Pink symbolizes self-expression. Theatre is all about expressing yourself thus using a bold and
 					expressive colour is a good option to celebrate individuality.</p>
 					<p>#5F2A88 Deep purple symbolizes depth and mystery as theatre thrives on mystery and transformation this
@@ -1698,11 +1699,11 @@
 									<!--start of key metrics part-->
 
 									<p><strong>Key Metrics</strong></p>
-									<pv>We measure our success by measuring the number of active website users, through clicks and
+									<p>We measure our success by measuring the number of active website users, through clicks and
 										referrals as well as monthly active community posts that are posted by users. Furthermore,
 										engagement with the articles will be measured by measuring the views, likes and shares. Moreover,
 										the visits per user will be measured. Moreover, the amount of subscriptions to the website will be
-										measured.</pv>
+										measured.</p>
 
 									<!--end  of key metrics part-->
 									<!--start of  revenue streams part-->
@@ -2431,8 +2432,6 @@
 
 				<!--footer ends here-->
 				<!--your script starts here-->
-				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
-				</script>
 				<!--your script ends here-->
 
 				<!--script for navigation starts here-->
