fixed logos everywhere after map change

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
   
         <div class="d-flex justify-content-start">
           <a href="index.html" class="no-link-style">
-            <img src="images/onc_notext.svg" alt="Brand Logo" style="height: 30px;">
+            <img src="images/logo-out-n-center/onc_notext.svg" alt="Brand Logo" style="height: 30px;">
           </a>
         </div>
   
@@ -136,7 +136,7 @@
 
         <div class="d-flex justify-content-start">
           <a href="index.html" class="no-link-style">
-            <img src="images/onc_notext2.svg" alt="Brand Logo" style="height: 30px;">
+            <img src="images/logo-out-n-center/onc_notext2.svg" alt="Brand Logo" style="height: 30px;">
           </a>
         </div>
 
@@ -223,7 +223,7 @@
     <div class="row">
       <h2 style="padding-bottom: 3%;">Who We Are</h2>
       <div class="text-center" style="background-color: whitesmoke;">
-        <img src="images/onc_nl_bs3.svg" alt="logo" style="width: 50%;" class="breathe-effect">
+        <img src="images/logo-out-n-center/onc_nl_bs3.svg" alt="logo" style="width: 50%;" class="breathe-effect">
       </div>
       <div class="container">
         <div class="row text-center">
