--- a/cart.html
+++ b/cart.html
@@ -27,7 +27,7 @@
 
       <div class="d-flex justify-content-start">
         <a href="index.html" class="no-link-style">
-          <img src="images/onc_notext.svg" alt="Brand Logo" style="height: 30px;">
+          <img src="images/logo-out-n-center/onc_notext.svg" alt="Brand Logo" style="height: 30px;">
         </a>
       </div>
 
@@ -137,7 +137,7 @@
 
         <div class="d-flex justify-content-start">
           <a href="index.html" class="no-link-style">
-            <img src="images/onc_notext2.svg" alt="Brand Logo" style="height: 30px;">
+            <img src="images/logo-out-n-center/onc_notext2.svg" alt="Brand Logo" style="height: 30px;">
           </a>
         </div>
 
