blog update with login modal

--- a/blog.html
+++ b/blog.html
@@ -263,14 +263,14 @@
       <!-- Empty row -->
 
       <div class="row">
-        <div class="col-12 col-xl-8" style="padding-bottom: 7px;">
+        <div class="col-12 col-xl-8" style="padding-bottom: 7px;" data-bs-toggle="modal" data-bs-target="#heartModal" role="button">
           <img src="images/blog-page-images/theater_play_actress.jpg" class="img-fluid" alt="template">
         </div>
-        <div class="col-12 col-xl-4">
+        <div class="col-12 col-xl-4" data-bs-toggle="modal" data-bs-target="#heartModal" role="button">
           <h4 class="outfit-semibold">Must-See LGBTQ+ Shows Right Now</h4>
           <p class="outfit-medium">A roundup of the latest and best gay-themed productions.</p>
           <p>From groundbreaking dramas to heartwarming comedies, these standout LGBTQ+ productions are redefining
-            queer storytelling on stage and screen. <i data-bs-toggle="modal" data-bs-target="#heartModal" role="button">more...</i>
+            queer storytelling on stage and screen. <i class="icon-style">more...</i>
           </p>
           <p class="date">02.05.2025</p>
         </div>
@@ -278,33 +278,33 @@
       <br>
 
       <div class="row">
-        <div class="col-12 col-md-6 col-xl-4">
+        <div class="col-12 col-md-6 col-xl-4" data-bs-toggle="modal" data-bs-target="#heartModal" role="button">
           <img src="images/blog-page-images/two_men.jpg" class="img-fluid" alt="template">
           <h1 class="blogtitle">Queer Theater Fans Speak: Why Representation Matters On Stage</h1>
           <p class="date">29.04.2025</p>
         </div>
-        <div class="col-12 col-md-6 col-xl-4">
+        <div class="col-12 col-md-6 col-xl-4" data-bs-toggle="modal" data-bs-target="#heartModal" role="button">
           <img src="images/blog-page-images/man_in_makeup.jpg" class="img-fluid" alt="template">
           <h1 class="blogtitle">Inside the Spotlight: Interviews with Queer Theater Stars</h1>
           <p class="date">23.04.2025</p>
         </div>
-        <div class="col-12 col-md-6 col-xl-4">
+        <div class="col-12 col-md-6 col-xl-4" data-bs-toggle="modal" data-bs-target="#heartModal" role="button">
           <img src="images/blog-page-images/theater_indoor.jpg" class="img-fluid" alt="template">
           <h1 class="blogtitle">The Smartest Ways to Score Theater Tickets</h1>
           <p class="date">14.04.2025</p>
         </div>
 
-        <div class="col-12 col-md-6 col-xl-4">
+        <div class="col-12 col-md-6 col-xl-4" data-bs-toggle="modal" data-bs-target="#heartModal" role="button">
           <img src="images/blog-page-images/costume_group.jpg" class="img-fluid" alt="template">
           <h1 class="blogtitle">From the Fringe to Broadway: How LGBTQ+ Stories Shape the Stage</h1>
           <p class="date">02.04.2025</p>
         </div>
-        <div class="col-12 col-md-6 col-xl-4">
+        <div class="col-12 col-md-6 col-xl-4" data-bs-toggle="modal" data-bs-target="#heartModal" role="button">
           <img src="images/blog-page-images/dark_theater.jpg" class="img-fluid" alt="template">
           <h1 class="blogtitle">Breaking Barriers: LGBTQ+ Playwrights Changing the Theater Scene</h1>
           <p class="date">25.03.2025</p>
         </div>
-        <div class="col-12 col-md-6 col-xl-4">
+        <div class="col-12 col-md-6 col-xl-4" data-bs-toggle="modal" data-bs-target="#heartModal" role="button">
           <img src="images/blog-page-images/rainbow_flag.jpg" class="img-fluid" alt="template">
           <h1 class="blogtitle">The Evolution of LGBTQ+ Representation in Theater</h1>
           <p class="date">13.03.2025</p>
