last changes one

--- a/corporate.html
+++ b/corporate.html
@@ -1736,7 +1736,7 @@
 											This will cost €1200 per year (Ko, 2025). </li>
 										<li><strong>People</strong> This includes salaries for employees and contributes. This will be
 											€104640 per year for four employees (Nationale Beroepengids, 2024).</li>
-										<li><strong>Ticket</strong> <strong>management system</strong> –the system is developed and licensed
+										<li><strong>Ticket</strong> <strong>management system</strong> – The system is developed and licensed
 											for a fixed fee of €240 (Pricing – SupportSystem, n.d.)</li>
 									</ul>
 									<p>Total variable costs: €106080 </p>
@@ -1929,7 +1929,7 @@
 											year  (Ko, 2025).</li>
 										<li><strong>People</strong>Salaries to employees and contributors. This is €104640 per year for four
 											employees (Nationale Beroepengids, 2024).</li>
-										<li><strong>Ticket</strong> <strong>management system</strong>The system is developed/licensed for a
+										<li><strong>Ticket</strong> <strong>management system</strong> - The system is developed/licensed for a
 											fixed fee rather than per transaction. This is €240 (Pricing – SupportSystem, n.d.)</li>
 									</ul>
 
@@ -2132,7 +2132,7 @@
 										<li><strong>People</strong>– Salaries to employees and contributors. For four entry level employees
 											€2180 will be paid per month. For one year 12 * €2180 = €26160 * 4 = €104640 per year (Nationale
 											Beroepengids, 2024) </li>
-										<li><strong>Ticket</strong> <strong>management system</strong>– The system is developed/licensed for
+										<li><strong>Ticket</strong> <strong>management system</strong> – The system is developed/licensed for
 											a fixed fee rather than per transaction 12 euros per month costs per year = €12 * 12 months = €240
 											(Pricing – SupportSystem, n.d.)</li>
 									</ul>
