logo footer everywhere fix

--- a/profile.html
+++ b/profile.html
@@ -271,7 +271,7 @@
         <div class="row">
             <!-- Brand Logo & Name -->
             <div class="col-md-4 text-center text-md-start">
-                <img src="images/onc_notext2.svg" alt="Brand Logo" style="height: 50px;">
+                <img src="images/logo-out-n-center/onc_notext2.svg" alt="Brand Logo" style="height: 50px;">
                 <h5 class="mt-2">outncenter</h5>
             </div>
 
