--- a/singleticket.html
+++ b/singleticket.html
@@ -321,7 +321,7 @@
 
 			  <!-- Add to Cart Button -->
 			  <div class="text-center mb-4">
-				<a href="cart.html" class="btn btn-primary" onclick="addToCart()">Add to Cart</a>
+				<a href="cart.html" class="btn btn-dark" onclick="addToCart()">Add to Cart</a>
 			  </div>
 			
 		<!-- Bootstrap JS -->
@@ -398,7 +398,7 @@
                 <div class="row">
                     <!-- Brand Logo & Name -->
                     <div class="col-md-4 text-center text-md-start">
-                        <img src="images/onc_notext2.svg" alt="Brand Logo" style="height: 50px;">
+                        <img src="images/logo-out-n-center/onc_notext2.svg" alt="Brand Logo" style="height: 50px;">
                         <h5 class="mt-2">outncenter</h5>
                     </div>
 
