--- a/about.html
+++ b/about.html
@@ -213,8 +213,8 @@
     <!--Start of container for vision-->
     <div class="row slide-in-left">
       <h6 class="text-center" style="font-size: 140%; padding: 50px;">
-        In the world of theatre where LGBTQ+ characters are often <br>misrepresented, we believe in shining spotlight
-        on authentic storytelling.<br> Because everyone at center stage deserves to be out and proud.
+        We believe in a theatre world where LGBTQ+ stories take the spotlight, and are loud, proud, and unapologetically real. We envision a theatre culture where Queer voices are celebrated, current tropes are challenged, and space is made for stories that reflect all of us. Because theatre is better when everyone gets to shine.
+
       </h6>
     </div>
     <br>
@@ -351,22 +351,29 @@
   </div>
 
   <div class="row index-about-bg text-center background-rainbow" style="color: whitesmoke; padding-top: 6%; padding-bottom: 5%;">
-    <div class="col-12 col-md-4">
-      <h4>Inclusivity</h4>
-      <p style="padding: 3%;" class="outfit-medium">
-        Whether you live for the spotlight or cheer from the seats, if you love LGBTQ+ theatre, you belong here.
+    <div class="col-12 col-md-6">
+      <h4>Connection Leads</h4>
+      <p style="padding: 3%;">
+        Theatre is not a solo act. We are all about building a space where real <strong>connection</strong> shines in the spotlight. Whether it’s deep conversations about Queer stories and representation, post-show feels or fans bonding online, we believe the magic lives in the shared experience.
       </p>
     </div>
-    <div class="col-12 col-md-4">
-      <h4>Authenticity</h4>
-      <p style="padding: 3%;" class="outfit-medium">
-        Bold, proud and authentic, we are committed to put LGBTQ+ voices in the spotlight.
+    <div class="col-12 col-md-6">
+      <h4>Telling the Complete Story</h4>
+      <p style="padding: 3%;">
+        We do not trim our truth to fit the mainstream.
+        Our stories are joyful, messy, complex and whole. We support and represent LGBTQ+ narratives in their full honesty, refusing to shrink them down or smooth them out. Truthful and authentic storytelling is at the heart of everything we do and we aim to strive for <strong>authenticity</strong>.        
       </p>
     </div>
-    <div class="col-12 col-md-4">
-      <h4>Learning</h4>
-      <p style="padding: 3%;" class="outfit-medium">
-        With every show, post and moment there’s something new to discover about theatre, identity and about each other.
+    <div class="col-12 col-md-6">
+      <h4>Move the Spotlight</h4>
+      <p style="padding: 3%;">
+        We are committed to lifting up voices that are underrepresented, underestimated and underfunded in Queer theatre.  LGBTQ+ theatre <strong>representation</strong> is crucial for us.
+      </p>
+    </div>
+    <div class="col-12 col-md-6">
+      <h4>For Real, Not for Show</h4>
+      <p style="padding: 3%;">
+        We stand for lasting <strong>equality</strong> in theatre, on stage, backstage and beyond. That means sharing power, creating access and showing up for our community. We reject tokenism and surface-level gestures. Our commitment to LGBTQ+ equality is not about being seen doing the right thing, it is about doing it.
       </p>
     </div>
   </div>
