--- a/corporate.html
+++ b/corporate.html
@@ -430,18 +430,20 @@
 						</div>
 
 						<h3 class="subheadings-content-part-corporate-page" id="vision">Brand vision</h3>
-						<p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight
-							on
-							authentic storytelling. Because everyone at centre stage deserves to be out and proud.</p>
+						<p>We believe in a theatre world where LGBTQ+ stories take the spotlight, and are loud, proud, and unapologetically real. We envision a theatre culture where Queer voices are celebrated, current tropes are challenged, and space is made for stories that reflect all of us. Because theatre is better when everyone gets to shine.
+						</p>
 
 						<h3 class="subheadings-content-part-corporate-page" id="values">Values</h3>
 						<ul>
-							<li><strong>Authenticity</strong> - Whether you live for the spotlight or cheer from the seats, if you
-								love LGBTQ+ theatre, you belong here.</li>
-							<li> <strong>Learning</strong> - Bold, proud and authentic, we are committed to put LGBTQ+ voices in the
-								spotlight. </li>
-							<li><strong>Inclusivity</strong>- With every show, post and moment there’s something new to discover about
-								theatre, identity and about each other.</li>
+							<li><strong>Connection Leads</strong> - Theatre is not a solo act. We are all about building a space where real <strong>connection</strong> shines in the spotlight. Whether it’s deep conversations about Queer stories and representation, post-show feels or fans bonding online, we believe the magic lives in the shared experience.
+							</li>
+							<li> <strong>Telling the Complete Story</strong> - We do not trim our truth to fit the mainstream.
+								Our stories are joyful, messy, complex and whole. We support and represent LGBTQ+ narratives in their full honesty, refusing to shrink them down or smooth them out. Truthful and authentic storytelling is at the heart of everything we do and we aim to strive for <strong>authenticity</strong>.
+								</li>
+							<li><strong>Move the Spotlight</strong> - We are committed to lifting up voices that are underrepresented, underestimated and underfunded in Queer theatre.  LGBTQ+ theatre <strong>representation</strong> is crucial for us.
+							</li>
+								<li><strong>For Real, Not for Show</strong> - We stand for lasting <strong>equality</strong> in theatre, on stage, backstage and beyond. That means sharing power, creating access and showing up for our community. We reject tokenism and surface-level gestures. Our commitment to LGBTQ+ equality is not about being seen doing the right thing, it is about doing it.
+								</li>
 						</ul>
 
 						<h3 class="subheadings-content-part-corporate-page">Brand Persona</h3>
