heading index full length

--- a/index.html
+++ b/index.html
@@ -340,7 +340,6 @@
                   <a href="singleticket.html" class="btn btn-light outfit-medium" style="color: #740318;">Find
                     Tickets</a>
                
-
                 <!-- Heart icon -->
                 <div data-bs-toggle="modal" data-bs-target="#heartModal" role="button">
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart"
@@ -362,7 +361,7 @@
     <!--blog container-->
     <div class="container main-margin-upper">
       <div class="row align-items-center">
-        <div class="col-9">
+        <div class="col-9 col-md-10">
           <a href="blog.html" class="no-link-style">
             <h2>The Spotlight Catalogue</h2>
           </a>
