index heading two

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     <!--blog container-->
     <div class="container main-margin-upper">
       <div class="row align-items-center">
-        <div class="col-9 col-md-10">
+        <div class="col-9">
           <a href="blog.html" class="no-link-style">
             <h2>The Spotlight Catalogue</h2>
           </a>
