justification values and vision

--- a/corporate.html
+++ b/corporate.html
@@ -430,7 +430,10 @@
 						</div>
 
 						<h3 class="subheadings-content-part-corporate-page" id="vision">Brand vision</h3>
-						<p>We believe in a theatre world where LGBTQ+ stories take the spotlight, and are loud, proud, and unapologetically real. We envision a theatre culture where Queer voices are celebrated, current tropes are challenged, and space is made for stories that reflect all of us. Because theatre is better when everyone gets to shine.
+						<p><strong>"We believe in a theatre world where LGBTQ+ stories take the spotlight, and are loud, proud, and unapologetically real. We envision a theatre culture where Queer voices are celebrated, current tropes are challenged, and space is made for stories that reflect all of us. Because theatre is better when everyone gets to shine."</strong>
+						</p>
+						<p>
+							The vision was changed from "In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at centre stage deserves to be out and proud", to the current one. This was changed as the first version of the vision did not flow very well and it did not communicate clearly what the dream of out n center is.
 						</p>
 
 						<h3 class="subheadings-content-part-corporate-page" id="values">Values</h3>
@@ -445,6 +448,9 @@
 								<li><strong>For Real, Not for Show</strong> - We stand for lasting <strong>equality</strong> in theatre, on stage, backstage and beyond. That means sharing power, creating access and showing up for our community. We reject tokenism and surface-level gestures. Our commitment to LGBTQ+ equality is not about being seen doing the right thing, it is about doing it.
 								</li>
 						</ul>
+						<p>
+							Firstly, the values were changed from three to four as we needed 1 value per team member. Furthermore, we tried to make the values more memorable by formulating them differently and more in a copywriting style. Additionally, the values were changed from inclusivity, learning and authenticity to representation, authenticity, equality and connection.
+						</p>
 
 						<h3 class="subheadings-content-part-corporate-page">Brand Persona</h3>
 						<img src="images/corporate-page-images/brand_persona_image/brand-persona.jpg" alt="brand persona"
